[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Hazards/Wing Man.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/wingMan1.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/wingMan2.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/wingMan3.png" type="Texture" id=4]
[ext_resource path="res://images/enemies/wingMan4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 7.10289, 6.22579 )

[sub_resource type="CircleShape2D" id=3]

radius = 0.01

[node name="WingMan" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="Sprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( 14.5276, -34.8073, 31.6706, -25.1905, 41.7055, -8.04756, 45.0504, 16.2034, 44.6323, 45.89, -44.8456, 45.0538, -44.8456, 1.15109, -38.5738, -15.9919, -19.3402, -33.9711, 0.729614, -38.5704 )

[node name="SensorRight" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRight"]
visible = false
position = Vector2( 125.658, -7.48953 )
shape = SubResource( 2 )

[node name="SensorLeft" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorLeft"]
visible = false
position = Vector2( -125.658, -7.48953 )
shape = SubResource( 2 )

[node name="PatrolTimer" type="Timer" parent="."]
one_shot = true

[node name="JustStoppedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="SensorRight" to="." method="_on_sensor_trigger"]
[connection signal="body_entered" from="SensorLeft" to="." method="_on_sensor_trigger"]
[connection signal="timeout" from="PatrolTimer" to="." method="move_again"]
[connection signal="timeout" from="JustStoppedTimer" to="." method="reset_just_stopped"]
